samples/_failures_safe/1761071130_4a7f73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_164aec1c.c: In function ‘main’:
./samples/SAFE/__tmp_164aec1c.c:152:38: error: expected ‘;’ at end of input
  152 |     transitions_stack[3].to_state = 0
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_164aec1c.c:152:5: error: expected declaration or statement at end of input
  152 |     transitions_stack[3].to_state = 0
      |     ^~~~~~~~~~~~~~~~~
